<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    tools:context=".view.activities.MainActivity"
    tools:ignore="HardcodedText">

    <data>
        <variable
            name="viewmodel"
            type="com.bvu.assistant.viewmodel.classes.MainActivityViewModel"/>
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/mainActionBar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/main_actionbar_height"
            android:layout_alignParentTop="true"
            app:layout_scrollFlags="scroll|enterAlways|snap"
            android:background="@color/colorPrimary">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/actionBarTitle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/actionbar_default_title"
                    android:fontFamily="sans-serif-black"
                    android:gravity="center_vertical"
                    android:background="@android:color/transparent"
                    android:textAppearance="@style/MaiActionBarTextTheme"
                    android:textColor="@color/white" />

                <EditText
                    android:id="@+id/edtSearchNews"
                    android:imeOptions="actionSearch"
                    android:singleLine="true"
                    android:inputType="text"

                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginVertical="15dp"
                    android:layout_marginEnd="15dp"

                    android:hint="Tìm kiếm"
                    android:textSize="12sp"
                    android:textAlignment="textStart"
                    android:textColor="@color/white"
                    android:textColorHint="@color/card_bottom_color"
                    android:background="@drawable/news_search_bar_bg"
                    android:drawableLeft="@drawable/ic_icons8_search"
                    android:drawableTint="@color/card_bottom_color"
                    android:drawablePadding="10dp"
                    android:importantForAutofill="no" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/actionBarMonthView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingEnd="15dp"
                    android:text="Tháng 7"
                    android:gravity="center_vertical"
                    android:background="@android:color/transparent"
                    android:textColor="@color/example_7_yellow"
                    android:textSize="18sp"
                    android:fontFamily="sans-serif-medium"
                    tools:ignore="RtlSymmetry" />
            </LinearLayout>
        </com.google.android.material.appbar.MaterialToolbar>
        <View
            android:id="@+id/mainActionBarBorder"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_below="@id/mainActionBar"
            android:background="@color/colorNavBarBorder" />


        <com.bvu.assistant.viewmodel.helpers.MyViewPager
            custom:allowSwiping="false"
            android:id="@+id/mainViewPager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/mainActionBarBorder"
            android:layout_above="@id/mainBottomNavBarBorder"
            android:background="#fff" />


        <View
            android:id="@+id/mainBottomNavBarBorder"
            android:layout_width="match_parent"
            android:layout_height="@dimen/tabLayout_border_height"
            android:layout_above="@id/mainBottomNavBar"
            android:background="@color/colorNavBarBorder" />
        <com.google.android.material.tabs.TabLayout
            android:id="@+id/mainBottomNavBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:theme="@style/MainTabBarTheme"

            app:tabTextAppearance="@style/MainTabBarTextTheme"
            app:tabIndicator="@drawable/main_tab_indicator"
            app:tabIndicatorFullWidth="true"
            app:tabPaddingStart="20dp"
            app:tabPaddingEnd="20dp"
            app:tabRippleColor="@color/colorPrimaryRipple"
            app:tabGravity="fill" >

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_tabbar_first_title"
                android:icon="@drawable/icon_note" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_tabbar_second_title"
                android:icon="@drawable/icon_calendar" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_tabbar_third_title"
                android:icon="@drawable/icon_home" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_tabbar_fourth_title"
                android:icon="@drawable/icon_bell" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_tabbar_fifth_title"
                android:icon="@drawable/icon_hamburger_menu" />
        </com.google.android.material.tabs.TabLayout>

    </RelativeLayout>


</layout>

